Modifiche per demo elisa 15/16 novembre

--- a/src/main/resources/templates/engineering/mypayTest.html
+++ b/src/main/resources/templates/engineering/mypayTest.html
@@ -23,7 +23,7 @@
 								<tr>
 									<th th:text="#{label.id}">label.id</th>
 									<th th:text="#{label.titolo}">label.titolo</th>
-									<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
+									<th th:text="#{label.procedure_formative_tipologia}">label.procedure_formative_tipologia</th>
 									<th th:text="#{label.prezzo}">label.prezzo</th>
 									<th th:text="#{label.stato}">label.stato</th>
 								</tr>
