--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -34,7 +34,7 @@
 					<!-- TIPOLOGIA EVENTO -->
 					<div class="item form-group">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
-							<span class="label-show" th:text="#{label.procedura_formativa}">Id del Provider</span>
+							<span class="label-show" th:text="#{label.procedure_formative_tipologia}">Id del Provider</span>
 						</label>
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 							<div class="value" th:text="${eventoWrapper.evento.proceduraFormativa}"></div>
