--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -68,7 +68,7 @@
 									<tr>
 										<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
 										<th th:text="#{label.titolo}">label.titolo</th>
-										<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
+										<th th:text="#{label.procedure_formative_tipologia}">label.procedure_formative_tipologia</th>
 										<th th:text="#{label.obiettivo_formativo_nazionale}">label.obiettivo_strategioco_nazionale</th>
 										<th th:text="#{label.obiettivo_formativo_regionale}">label.obiettivo_strategioco_regionale</th>
 										<th th:text="#{label.azioni}">label.azioni</th>
@@ -78,7 +78,7 @@
 									<tr th:each="eventoPF, row : ${eventoAttuazioneList}">
 										<td th:text="${eventoPF.getCodiceIdentificativo()}"></td>
 										<td th:text="${eventoPF.titolo}"></td>
-										<td th:text="${eventoPF.proceduraFormativa.nome}"></td>
+										<td th:text="${eventoPF.proceduraFormativa.name()}"></td>
 										<td th:text="${eventoPF.obiettivoNazionale.nome}"></td>
 										<td th:text="${eventoPF.obiettivoRegionale.nome}"></td>
 										<td>
@@ -117,7 +117,7 @@
 									<tr>
 										<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
 										<th th:text="#{label.titolo}">label.titolo</th>
-										<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
+										<th th:text="#{label.procedure_formative_tipologia}">label.procedure_formative_tipologia</th>
 										<th th:text="#{label.data_inizio}">label.data_inizio</th>
 										<th th:text="#{label.azioni}">label.azioni</th>
 									</tr>
@@ -126,7 +126,7 @@
 									<tr th:each="evento, row : ${eventoRiedizioneList}">
 										<td th:text="${evento.getCodiceIdentificativo()}"></td>
 										<td th:text="${evento.titolo}"></td>
-										<td th:text="${evento.proceduraFormativa.nome}"></td>
+										<td th:text="${evento.proceduraFormativa.name()}"></td>
 										<td th:text="${#temporals.format(evento.dataInizio, 'dd/MM/yyyy')}"></td>
 										<td>
 											<a class="btn btn-primary btn-table single" th:href="@{|/provider/${providerId}/evento/${evento.id}/re-edit|}"><i class="glyphicon glyphicon-repeat"> </i> <span th:text="#{label.riedita}"> </span></a>
@@ -170,10 +170,15 @@
 							<thead>
 								<tr>
 									<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
+									<th th:text="#{label.edizione}">label.edizione</th>
+									<th th:text="#{label.procedure_formative_tipologia}">label.procedure_formative_tipologia</th>
 									<th th:text="#{label.titolo}">label.titolo</th>
-									<th th:text="#{label.procedura_formativa}">label.procedura_formativa</th>
+									<th th:text="#{label.sede}">label.sede</th>
+									<th th:text="#{label.date}">label.date</th>
 									<th th:text="#{label.stato}"></th>
-									<th th:text="#{label.stato_pagamento}">label.stato_pagamento</th>
+									<th th:text="#{label.numero_partecipanti}">label.titolo</th>
+									<th th:text="#{label.ore_corso}">label.ore_corso</th>
+									<th th:text="#{label.stato_pagamento}"></th>
 									<th th:text="#{label.data_scadenza_pagamento}">label.data_scadenza_pagamento</th>
 									<th th:text="#{label.azioni}">label.azioni</th>
 								</tr>
@@ -181,9 +186,14 @@
 							<tbody th:remove="all-but-first">
 								<tr th:each="evento, row : ${eventoList}">
 									<td><a th:text="${evento.getCodiceIdentificativo()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/show|}"></a></td>
-									<td th:text="${evento.titolo}"></td>
+									<td th:text="${evento.edizione}"></td>
 									<td th:text="${evento.proceduraFormativa.name()}"></td>
+									<td th:text="${evento.titolo}"></td>
+									<td th:text="#{label.sede}"></td>
+									<td th:text="#{label.date}">label.date</td>
 									<td th:text="${evento.stato.nome}"></td>
+									<td th:text="${evento.numeroPartecipanti}"></td>
+									<td th:text="${evento.durata + ' (ore)'}"></td>
 									<td th:if="${evento.pagato}"><span class="label-pagato" th:text="#{label.pagato}"></span></td>
 									<td th:unless="${evento.pagato}">
 										<span th:if="${evento.pagInCorso}" class="label-non-pagato" th:text="#{label.pagInCorso}"></span>	
