--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -52,6 +52,10 @@
 
 							<div class="with-margin-top with-margin-bottom"></div>
 
+							<div class="model-link" id="esempio_rendicontazione">
+								<i class="fa fa-file-text"></i>
+								<a id="rendicontazione_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/15.dichiarazione_esclusione_del_conflitto_di%20interessi_per_oggetto_sociale.pdf"></a>
+							</div>
 							<th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, reportPartecipanti, null, null, null, false, 'edit', false)" ></th:block>
 
 							<div class="item form-group with-margin-top">
