--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -146,10 +146,10 @@
 					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.help}"></a>
 					  </li>
 					  <li class="">
-					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.faq}"></a>
+					    <a target="new" href="https://salute-test.regione.veneto.it/web/e.c.m/faq" th:text="#{label.faq}"></a>
 					  </li>
 					  <li class="">
-					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.portale}"></a>
+					    <a target="new" href="https://salute-test.regione.veneto.it/web/e.c.m/home" th:text="#{label.portale}"></a>
 					  </li>
               		</ul>
 				</nav>
