--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -284,7 +284,7 @@
 										<span>3</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="proceduraFormativa">
-										<span th:text="#{label.procedura_formativa}">Id del Provider</span>
+										<span th:text="#{label.procedure_formative_tipologia}">Id del Provider</span>
 									</label>
 
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="proceduraFormativa">
@@ -862,26 +862,47 @@
 				 					<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.durata')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.durata')}__}"></div>
 				 				</div>
 
-				 				<!-- CREDITI FORMATIVI -->
-								<div class="item form-group">
-									<label class="control-label col-xs-1">
-										<span>22</span>
-									</label>
-									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="creditiFormativi">
-										<span th:text="#{label.crediti_formativi_attribuiti_evento}">Crediti attribuiti all'evento</span>
-										<span class="required">*</span>
-									</label>
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-				 						<div class="value-edit" th:text="${eventoWrapper.evento.crediti}"></div>
-				 					</div>
-								</div>
+								<!-- CREDITI FORMATIVI PROPOSTI-->
+									<div class="item form-group">
+										<label class="control-label col-xs-1">
+											<span>22</span>
+										</label>
+										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="creditiFormativi">
+											<span th:text="#{label.crediti_formativi_proposti_dal_sistema}">Crediti Fromativi proposti dal sistema</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-xs-5" id="creditiFormativi">
+											<span class="value-edit" th:text="${eventoWrapper.creditiProposti}"></span>
+											<span class="checkbox">
+											<label>
+												<input type="checkbox" class="flat crediti-conferma" th:field="${eventoWrapper.evento.confermatiCrediti}" th:value="${true}" />
+												<span th:text="#{label.conferma_crediti_proposti_dal_sistema}"></span>
+											</label>
+											</span>
+										</div>
+									</div>
+
+									<!-- CREDITI FORMATIVI INSERITI DALL'UTENTE-->
+									<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')} ? 'bad'">
+										<label class="control-label col-xs-1">
+											<span>23</span>
+										</label>
+										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="creditiFormativi">
+											<span th:text="#{label.crediti_formativi_attribuiti_utente}">Crediti attribuiti all'evento dall'utente</span>
+											<span class="required">*</span>
+										</label>
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="creditiFormativi">
+											<input type="text" class="form-control crediti-proposti" th:field="${eventoWrapper.evento.crediti}" />
+										</div>
+										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.crediti')}__}"></div>
+									</div>
 
 								<div class="divider-dashed"></div>
 
 								<!-- VERIFICA PRESENZA PARTECIPANTI -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.verificaPresenzaPartecipanti')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>23</span>
+										<span>24</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="verificaPresenzaPartecipanti">
 										<span th:text="#{label.verifica_presenza_partecipanti}">Verifica presenza partecipanti</span>
@@ -903,7 +924,7 @@
 								<!-- VERIFICA APPRENDIMENTO PARTECIPANTI -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.verificaApprendimento')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>24</span>
+										<span>25</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="verificaApprendimentoPartecipanti">
 										<span th:text="#{label.verifica_apprendimento_partecipanti}">Verifica Apprendimento partecipanti</span>
@@ -925,7 +946,7 @@
 								<!-- INDICATORE EFFICACIA -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.indicatoreEfficaciaFormativa')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>25</span>
+										<span>26</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="indicatore">
 										<span th:text="#{label.indicatore_efficacia}">Indicatori per misurare l’efficacia formativa del progetto</span>
@@ -940,7 +961,7 @@
 								<!-- RESPONSABILE SEGRETERIA ORGANIZZATIVA -->
 								<div class="item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabileSegreteria')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>26</span>
+										<span>27</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="responsabileSegreteria">
 										<span th:text="#{label.responsabile_segreteria_organizzativa}">Responsabile segreteria organizzativa</span>
@@ -959,7 +980,7 @@
 								<!-- QUOTA PARTECIPAZIONE -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.quotaPartecipazione')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>27</span>
+										<span>28</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="quota">
 										<span th:text="#{label.quota_partecipazione}">Quota di partecipazione</span>
@@ -977,7 +998,7 @@
 								<!-- RADIO SPONSOR -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoSponsorizzato')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>28</span>
+										<span>29</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span th:text="#{label.evento_sponsorizzato_radio}">L'Evento è sponsorizzato?</span>
@@ -1089,7 +1110,7 @@
 								<!-- RADIO FORME FINANZIAMENTO -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.altreFormeFinanziamento')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>29</span>
+										<span>30</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span th:text="#{label.forme_finanziamento_radio}">Sono presenti forme di finanziamento?</span>
@@ -1150,7 +1171,7 @@
 								<!-- RADIO PARTNER -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoAvvalePartner')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>30</span>
+										<span>31</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11">
 										<span th:text="#{label.si_avvale_di_partner}">L’evento si avvale di partner?</span>
@@ -1191,7 +1212,7 @@
 								<!-- DICHIARAZIONE CONFLITTO INTERESSI -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'dichiarazioneAssenzaConflittoInteresse')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>31</span>
+										<span>32</span>
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dichiarazioneAssenzaConflittoInteresse">
 										<span th:text="#{label.dichiarazione_assenza_conflitto_interesse}">Dichiarazione di assenza di conflitto di interesse</span>
@@ -1212,7 +1233,7 @@
 								<!-- PROCEDURA VERIFICA QUALITÀ -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.proceduraVerificaQualitaPercepita')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>32</span>
+										<span>33</span>
 									</label>
 									<div class="control-label col-md-3 col-sm-3 col-xs-11">
 									</div>
@@ -1233,7 +1254,7 @@
 								<!-- AUTORIZZAZIONE -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.autorizzazionePrivacy')} ? 'bad'">
 									<label class="control-label col-xs-1">
-										<span>33</span>
+										<span>34</span>
 									</label>
 									<div class="control-label col-md-3 col-sm-3 col-xs-11">
 									</div>
