--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -259,7 +259,7 @@
 											<span>3</span>
 										</label>
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="proceduraFormativa">
-											<span th:text="#{label.procedura_formativa}">Id del Provider</span>
+											<span th:text="#{label.procedure_formative_tipologia}">Id del Provider</span>
 										</label>
 
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="proceduraFormativa">
