--- a/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoFragment.html
+++ b/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoFragment.html
@@ -52,7 +52,7 @@
 							<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 							<label th:class="${valutabile ? 'margin-valutabile text-center col-lg-1 col-md-1 col-sm-1 col-xs-1' : 'control-label col-xs-1'}" th:text="${!showOnly ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('evento.proceduraFormativa') : ''}"></label>
 							<label th:class="${valutabile ? 'margin-valutabile text-center col-lg-2 col-md-2 col-sm-4 col-xs-4' : 'control-label col-md-3 col-sm-3 col-xs-11'}" for="procedure_formative_radio">
-								<span th:class="${showOnly ? 'label-show' : ''}" th:text="#{label.procedure_formative}">Procedure formative</span>
+								<span th:class="${showOnly ? 'label-show' : ''}" th:text="#{label.procedure_formative_tipologia}">Procedure formative</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:if="${editabile}">
