--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -22,7 +22,7 @@
 						<tr>
 							<th th:text="#{label.titolo}">Titolo</th>
 							<th th:text="#{label.codice_identificativo}">Id</th>
-							<th th:text="#{label.procedura_formativa}">Tipologia Formazione</th>
+							<th th:text="#{label.procedure_formative_tipologia}">Tipologia Formazione</th>
 							<th th:unless="${editabile or enableField}" th:text="${valutabile ? #messages.msg('label.stato_valutazione') : #messages.msg('label.stato_inserimento')}">label.stato_inserimento/valutazione</th>
 							<th th:if="${hasActionButtons}" th:text="#{label.azioni}">Azioni</th>
 						</tr>
@@ -31,7 +31,7 @@
 						<tr th:each="evento, row : ${__${pianoFormativo}__.eventiPianoFormativo}">
 							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
 							<td th:text="${evento.getCodiceIdentificativo()}"></td>
-							<td th:text="${evento.proceduraFormativa.nome}"></td>
+							<td th:text="${evento.proceduraFormativa.name()}"></td>
 							<th:block th:unless="${editabile or enableField}">
 								<td th:if="${(showOnly or enableField) and !evento.new}">
 									<i class="fa table-icon fa-check green" th:title="#{label.inserito}"></i>
