--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -59,6 +59,10 @@
 														<!-- importazione eventi piano formativo -->
 														<form class="form-horizontal form-label-left" th:action="@{|/provider/${pianoFormativo.provider.id}/pianoFormativo/${pianoFormativo.id}/importaEventiDaCSV|}"
 																method="post" enctype="multipart/form-data" novalidate="novalidate">
+															<div class="model-link" id="esempio_importEventi">
+																<i class="fa fa-file-text"></i>
+																<a id="importEventi_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/15.dichiarazione_esclusione_del_conflitto_di%20interessi_per_oggetto_sociale.pdf"></a>
+															</div>
 															<th:block th:include="fragments/allegati :: allegati(pianoFormativoWrapper, false, importEventiDaCsvFile, null, null, null, false, null, false)" ></th:block>
 															<div class="item form-group with-margin-top">
 																<div class="col-xs-5"></div>
